2003-12-02  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (begin_insertion): look for a newline before
	@anchor and @caption commands in floatenv.

2003-12-2 Arnold Robbins  <arnold@skeeve.com>

	* makeinfo/insertion.c (end_insertion): Change tests for docbook
	and insertion to check current insertion type instead of if deep
	inside a float insertion.
	(cm_example, cm_smallexample, cm_lisp, cm_smalllisp, cm_cartouche)
	(cm_caption): Same.

	* xml.h (FLOATCARTOUCHE): New constant.
	* xml.c (texinfoxml_element_list, docbook_element_list): Add "sidebar"
	for FLOATCARTOUCHE.  For docbook, map @display, @smalldisplay to
	"literallayout".
	(replacement_elements): Add entry for CARTOUCHE -> FLOATCARTOUCHE.
	(xml_begin_docbook_float): Special case for CARTOUCHE, sidebars don't
	have labels.

2003-12-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\float, \listoffloats): new macros for new
		@-commands -- skeletal implementation only now.

	From: Aharon Robbins <arnold@skeeve.com>, 1 Dec 2003 17:43:12 +0200:
	* makeinfo/float.h (current_float_type): declare.
	* makeinfo/cmds.c (cm_colon): new fn.
	(command_table): use it for @:.

2003-11-29  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (@turnoffactive): include @unsepspaces, so
	spaces in anchor names don't expand in the .aux file.  From
	Stepan.

2003-11-28  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Abstract Objects): class names are no longer
	printed in rm by default.
	* doc/texinfo.tex (\cite): redefine to always use \sl, never \ttsl.
	* doc/texinfo.tex (\ttslanted): new macro.
	(\normaldefunargs): use it for @var; go back to
	\sl by default.

	* doc/texinfo.txi: document @deftypecv.

2003-11-28  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_comment): do not perform expansion.

2003-11-28  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_r): also set font-weight to normal in HTML.

2003-11-28  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_comment): new function to output comments in